@@ -103,10 +103,17 @@ MACRO(MAKE_HASH_TOOLS _source)
     UNSET(_hash_tools_h)
 ENDMACRO()
 
-MACRO (WEBKIT_WRAP_SOURCELIST _input)
-    IF (WTF_PLATFORM_QT)
-        FOREACH (_file ${ARGN})
-            GET_FILENAME_COMPONENT(_basename ${_file} NAME_WE)
+MACRO (WEBKIT_WRAP_SOURCELIST)
+    FOREACH (_file ${ARGN})
+        GET_FILENAME_COMPONENT(_basename ${_file} NAME_WE)
+        GET_FILENAME_COMPONENT(_path ${_file} PATH)
+
+		IF (NOT _file MATCHES "${DERIVED_SOURCES_DIR}")
+            STRING(REGEX REPLACE "/" "\\\\\\\\" _sourcegroup "${_path}")
+            SOURCE_GROUP("${_sourcegroup}" FILES ${_file})
+		ENDIF ()
+
+        IF (WTF_PLATFORM_QT)
             SET(_moc_filename ${DERIVED_SOURCES_DIR}/${_basename}.moc)
 
             FILE(READ ${_file} _contents)
@@ -116,6 +123,8 @@ MACRO (WEBKIT_WRAP_SOURCELIST _input)
                 QT4_GENERATE_MOC(${_file} ${_moc_filename})
                 ADD_SOURCE_DEPENDENCIES(${_file} ${_moc_filename})
             ENDIF ()
-        ENDFOREACH ()
-    ENDIF ()
+        ENDIF ()
+    ENDFOREACH ()
+
+    SOURCE_GROUP("DerivedSources" REGULAR_EXPRESSION "${DERIVED_SOURCES_DIR}")
 ENDMACRO ()
