@@ -1,3 +1,12 @@
+2011-01-05  Patrick Gansterer  <paroga@webkit.org>
+
+        Reviewed by Andreas Kling.
+
+        [CMake] Fix the usage of SOURCE_GROUP
+        https://bugs.webkit.org/show_bug.cgi?id=51739
+
+        * CMakeLists.txt:
+
 2011-01-05  Andras Becsi  <abecsi@webkit.org>
 
         Reviewed by Csaba Osztrogonác.
